# QCodeEditor

./: .gitmodules  CMakeLists.txt
example/src/: MainWindow.cpp
include/internal/: QCodeEditor.hpp  QJSHighlighter.hpp  QLineNumberArea.hpp
src/internal/: QCodeEditor.cpp  QJSHighlighter.cpp  QLineNumberArea.cpp
tools/unix/: install_ecm.sh  install_ksh.sh
